--- a/src/components/Style.css
+++ b/src/components/Style.css
@@ -88,6 +88,7 @@ justify-content: center;
 	display: flex;
   flex-direction: row;
   align-self: center;
+  margin: auto;
 }
 
   @media screen and (max-width:100px) {
